<resources>
    <string name="app_name">Note Book</string>
    <string name="validate_text_fail">Все поля должны быть заполнены</string>
    <string name="new_note">Новая заметка</string>
    <string name="edit">Редактировать</string>
    <string name="delete">Удалить</string>
    <string name="title_hint">Название</string>
    <string name="save">Сохранить</string>
    <string name="content_hint">Заметка</string>
    <string name="notes">Заметки</string>
    <string name="new_one">Новая заметка</string>
    <string name="about">О приложении</string>
    <string name="about_app_text">Здесь могла быть ваша реклама</string>
    <string name="attach">Прикрепить</string>
    <string name="cant_load_image">Не удалось загрузить картинку</string>
    <string name="unable_to_download">Невозможно загрузить картинку</string>
    <string name="couldnt_delete_note">Не удалось удалить заметку</string>
    <string name="log_out">выйти</string>
    <string name="delete_dialog">Удалить заметку безвозвратно?</string>
    <string name="delete_option">УДАЛИТЬ</string>
    <string name="cancel_option">ОТМЕНА</string>
</resources>