<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    android:padding="@dimen/main_margin">

    <EditText
        android:id="@+id/et_edit_new_note_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title_hint"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:maxLength="15"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
        app:layout_constraintBottom_toTopOf="@+id/sv_scroll_content"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Note#1" />

    <ScrollView
        android:id="@+id/sv_scroll_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/btn_save_new_note"
        app:layout_constraintTop_toBottomOf="@id/et_edit_new_note_title">

        <EditText
            android:id="@+id/et_edit_new_note_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/content_hint"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            tools:text="Some content" />
    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save_new_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>

